@@ -1,4 +1,4 @@
-/* $Id: winuser.h,v 1.36 2000-02-21 17:21:03 cbratschi Exp $ */
+/* $Id: winuser.h,v 1.37 2000-02-22 17:05:17 cbratschi Exp $ */
 
 #ifndef __INCLUDE_WINUSER_H
 #define __INCLUDE_WINUSER_H
@@ -344,8 +344,8 @@ typedef struct
 #define OBM_OLD_CLOSE       32767
 
 //CB: Odin bitmaps -> unknown ID
-#define OBM_HELP            32730 //help button
-#define OBM_HELPD           32729 //pressed help button
+#define OBM_CONTEXTHELP     32730 //help button
+#define OBM_CONTEXTHELPD    32729 //pressed help button
 
 #define OCR_BUMMER          100
 #define OCR_DRAGOBJECT      101
